--- a/views/html/index.html
+++ b/views/html/index.html
@@ -1,1 +1,16 @@
+<!Doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8"> 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="../../libraries/angular.min.js" type="text/javascript"></script>
+<script src="../../libraries/jquery.min.js" type="text/javascript"></script>
+<script src="../../libraries/bootstrap.min.js" type="text/javascript"></script>
+<script src="../../js/script.js" type="text/javascript"></script>
+<link rel="stylesheet" href="../../libraries/bootstrap.min.css" />
+<link rel="stylesheet" href="../../css/custom.css" />
+</head>
+<body>
 
+</body>
+</html>
