--- a/views/html/index.html
+++ b/views/html/index.html
@@ -5,17 +5,15 @@
         <meta http-equiv="X-UA_Compatible" content="IE-Edge">
         <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="../../libraries/angular.min.js" ></script>
-	
-        <script src="../../libraries/jquery.min.js" ></script>
-	
-        <script src="../../libraries/bootstrap.min.js"></script>
-	
-        <script src="../../js/script.js" ></script>
-	
-        <link rel="stylesheet" href="../../libraries/bootstrap.min.css" />
-	
-        <link rel="stylesheet" href="../../css/custom.css" />
+        <script src="../../libraries/angular.min.js" type="text/javascript"></script>
+	<script src="../../libraries/angular-route.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="../../libraries/bootstrap.min.css" />
+	<script src="../../libraries/jquery.min.js" type="text/javascript"></script>
+	<script src="../../libraries/bootstrap.min.js" type="text/javascript"></script>
+	<script src="../../js/script.js" type="text/javascript"></script>
+	<script src="../../js/app.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="../../css/font-awesome.css" />
+	<link rel="stylesheet" href="../../css/custom.css" />
 
     </head>
     <body>
