--- a/drf-test/formstyles.css
+++ b/drf-test/formstyles.css
@@ -14,6 +14,7 @@
 .form-input-container p{font-size: 19px;font-family: arial regular;}
 .form-input-container ul li{float:left;list-style-type:none;margin: 38px 10px;}
 .form-input-container ul li span{font: normal 18px arial regular;}
+.bottom-row{margin-bottom: -50px;}
 
 #manditory{
     color:red;
@@ -23,8 +24,4 @@
     padding: 20px 0px 0px 20px;
     font: bold 20px arial, sans-serif;
 
-}
-select{
-	width: 93%;
-	height:33px;
 }
