--- a/drf-test/css/formstyles.css
+++ b/drf-test/css/formstyles.css
@@ -1,47 +1,35 @@
-.mainForm {
-    border : 1px solid #D3D3D3;
-    margin: 50px 75px;
-    height: 2000px;
-    
-    width: 80%;
-     } 
-.mainDiv{
-    padding: 30px;
-}
- .title {
-    color: #696969;
-    font-style: normal;
-    font-family: Arial Regular;
-    font-size: 25pt;
-    padding:30px;
-    
-    border-bottom: 1px solid #D3D3D3; 
-    }
- .group1{
-    padding:30px;
-        }
-#formSection{
-     color: #696969;
-    font-style: normal;
-    font-family: Arial Regular;
-    font-size: 25pt;
-  
-    
-  }
-#required{
+.drf-container h1{color:#0c7cba;font-weight:bold;}
+.form-container{border:1px solid #D3D3D3;margin: 30px 0;}
+.form-container h2{color:#696969; font-family :arial regular;padding: 10px 10px;}
+.form-close{color:#696969;padding-top: 10px;}
+.form-content{border-top:1px solid #D3D3D3;padding:10px 30px 30px 10px;}
+
+.form-content h3{color: #696969;font-family: arial regular;}
+.required{
     padding:20px;
     color: red;
     float: right;
     }
+.form-input-container{margin: 8px 0 20px;}
+.form-input-container p{font-size: 19px;font-family: arial regular;}
+.form-input-container ul li{float:left;list-style-type:none;margin: 38px 10px;}
+.form-input-container ul li span{font: normal 18px arial regular;}
+.bottom-row{margin-bottom: -50px;}
+.issue-text {width: 100%; height: 250px;}
+.form-input-container-section2 p{font-size: 19px;font-family: arial regular;}
+.form-input-container-section2{ margin-top: 8px;}
+.form-plus{float:right; margin: -31px -55px 0px 0px;}
+#section3-text{margin-left:4px;}
 #manditory{
     color:red;
 
 }
-#label{
-    padding:30px;
+.form-group{
+    padding: 20px 0px 0px 20px;
     font: bold 20px arial, sans-serif;
+
 }
-.change_vehicle{
-    padding:0px 30px;
-    width:70%;
+select{
+	width: 100%;
+	height:33px;
 }
