--- a/drf-test/css/formstyles.css
+++ b/drf-test/css/formstyles.css
@@ -1,5 +1,5 @@
 .drf-container h1{color:#0c7cba;font-weight:bold;}
-.form-container{border:1px solid #D3D3D3;margin: 30px 0;}
+.form-container{border:1px solid #D3D3D3;margin: 30px 0 0 0;}
 .form-container h2{color:#696969; font-family :arial regular;padding: 10px 10px;}
 .form-close{color:#696969;padding-top: 10px;}
 .form-content{border-top:1px solid #D3D3D3;padding:10px 30px 30px 10px;}
@@ -17,9 +17,10 @@
 .bottom-row{margin-bottom: -50px;}
 .issue-text {width: 100%; height: 250px;}
 .form-input-container-section2 p{font-size: 19px;font-family: arial regular;}
-.form-input-container-section2{ margin-top: 8px;}
+.form-input-container-section2{ margin-top: 10px;}
 .form-plus{float:right; margin: -31px -55px 0px 0px;}
-#section3-text{margin-left:4px;}
+.section3{margin-bottom: 20px;}
+.form-footer{border-top:0; margin: 0 0 30px 0; padding: 20px; text-align: right;}
 #manditory{
     color:red;
 
@@ -33,3 +34,8 @@ select{
 	width: 100%;
 	height:33px;
 }
+
+input[type] {
+	border-radius : 0px;
+}
+
